Item&Equipment system update

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="./js/mainState.js"></script>
 <script src="./js/ListBoxClass.js"></script>
 <script src="./js/itemDialog.js"></script>
+<script src="./js/roleDialog.js"></script>
 <script src="./js/menuDialog.js"></script>
 <script src="./js/stones.js"></script>
 <script src="./js/main.js"></script>
