--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <script src="./js/phaser.min.js"></script>
 <script src="./js/Entity.js"></script>
 <script src="./js/items.js"></script>
+<script src="./js/stones.js"></script>
+<script src="./js/Maps.js"></script>
 <script src="./js/mainState.js"></script>
 <script src="./js/ListBoxClass.js"></script>
+<script src="./js/fightSystem.js"></script>
 <script src="./js/itemDialog.js"></script>
 <script src="./js/roleDialog.js"></script>
 <script src="./js/menuDialog.js"></script>
-<script src="./js/stones.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
