--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <div id="fuck"></div>
 
 <script src="./js/phaser.min.js"></script>
+<script src="./js/purchase.js"></script>
+<script src="./js/saveAndLoad.js"></script>
 <script src="./js/Entity.js"></script>
 <script src="./js/player.js"></script>
 <script src="./js/Monsters.js"></script>
