--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <div id="fuck"></div>
 
 <script src="./js/phaser.min.js"></script>
-<script src="./js/purchase.js"></script>
+<script src="./js/LoadState.js"></script>
+<script src="./js/player.js"></script>
 <script src="./js/saveAndLoad.js"></script>
 <script src="./js/Entity.js"></script>
 <script src="./js/player.js"></script>
@@ -18,6 +19,7 @@
 <script src="./js/Maps.js"></script>
 <script src="./js/mainState.js"></script>
 <script src="./js/ListBoxClass.js"></script>
+<script src="./js/purchase.js"></script>
 <script src="./js/fightSystem.js"></script>
 <script src="./js/fightDialogs.js"></script>
 <script src="./js/itemDialog.js"></script>
