--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <script src="./js/items.js"></script>
 <script src="./js/stones.js"></script>
 <script src="./js/Maps.js"></script>
+<script src="./js/Maps2.js"></script>
 <script src="./js/mainState.js"></script>
 <script src="./js/ListBoxClass.js"></script>
 <script src="./js/purchase.js"></script>
